--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
                     <!-- Triangle -->
                     <div class="card bg-base-100 lg:w-80 shadow-xl">
-                        <figure class="p-4"><img src="./images/triangle.png" alt="Shoes" /></figure>
+                        <figure class="p-4"><img src="./images/triangle.png" alt="" /></figure>
                         <div class="card-body">
-                          <h2 class="text-center text-xl font-semibold">Triangle</h2>
+                          <h2 id="triangle" class="text-center text-xl font-semibold">Triangle</h2>
                           <p class="text-center">Area (A) = 0.5 x b x h</p>
                          <!-- input field container -->
                           <div class="text-center my-4">
@@ -45,7 +45,7 @@
                     <div class="card bg-base-100 lg:w-80 shadow-xl">
                         <figure class="mt-3 p-4"><img src="./images/rectangle.png" alt="Shoes" /></figure>
                         <div class="card-body">
-                          <h2 class="text-center text-xl font-semibold">Rectangle</h2>
+                          <h2 id="rectangle" class="text-center text-xl font-semibold">Rectangle</h2>
                           <p class="text-center">Area (A) = w x l</p>
                          <!-- input field container -->
                           <div class="text-center my-4">
@@ -65,7 +65,7 @@
                     <div class="card bg-base-100 lg:w-80 shadow-xl">
                         <figure class="mt-7 p-4"><img src="./images/parallelogram.png" alt="" /></figure>
                         <div class="card-body">
-                          <h2 class="text-center text-xl font-semibold">Parallelogram</h2>
+                          <h2 id="parallelogram" class="text-center text-xl font-semibold">Parallelogram</h2>
                           <p class="text-center">Area (A) = b x h</p>
                         <!-- input container -->
                           <div class="text-center my-4">
@@ -87,7 +87,7 @@
                     <div class="card bg-base-100 lg:w-80 shadow-xl">
                         <figure class="mt-7 p-4"><img src="./images/rhombus.png" alt="" /></figure>
                         <div class="card-body">
-                          <h2 class="text-center text-xl font-semibold">Rhombus</h2>
+                          <h2 id="rhombus" class="text-center text-xl font-semibold">Rhombus</h2>
                           <p class="text-center">Area (A) = 0.5 x d<sub>1</sub> x d<sub>2</sub></p>
                         <!-- input container -->
                           <div class="text-center my-4">
@@ -109,7 +109,7 @@
                     <div class="card bg-base-100 lg:w-80 shadow-xl">
                         <figure class="mt-7 p-4"><img src="./images/pentagon.png" alt="" /></figure>
                         <div class="card-body">
-                          <h2 class="text-center text-xl font-semibold">Pentagon</h2>
+                          <h2 id="pentagon" class="text-center text-xl font-semibold">Pentagon</h2>
                           <p class="text-center">Area (A) = 0.5 x p x b</p>
                         <!-- input container -->
                           <div class="text-center my-4">
@@ -131,27 +131,27 @@
                     <div class="card bg-base-100 lg:w-80 shadow-xl">
                         <figure class="mt-7 p-4"><img src="./images/ellipse.png" alt="" /></figure>
                         <div class="card-body">
-                          <h2 class="text-center text-xl font-semibold">Ellipse</h2>
+                          <h2 id="ellipse" class="text-center text-xl font-semibold">Ellipse</h2>
                           <p class="text-center">Area (A) = 𝝅ab</p>
                         <!-- input container -->
                           <div class="text-center my-4">
-                            <input type="number" id="rhombus-diagonal-one" class="border px-2 border-black w-20 bg-gray-100" placeholder="a">
+                            <input type="number" id="major-radius" class="border px-2 border-black w-20 bg-gray-100" placeholder="a">
                             <span>cm</span>
-                            <input type="number" id="rhombus-diagonal-two" class="border px-2 ml-3 border-black w-20 bg-gray-100" placeholder="b">
+                            <input type="number" id="minor-radius" class="border px-2 ml-3 border-black w-20 bg-gray-100" placeholder="b">
                             <span>cm</span>
                          </div>
                          <div id="ellipse-area">
                          </div>
                           <div class="card-actions">
-                            <button onclick="calculateRhombusArea()" class="btn bg-blue-500 hover:bg-blue-900 text-white w-full">Calculate</button>
+                            <button onclick="calculateEllipseArea()" class="btn bg-blue-500 hover:bg-blue-900 text-white w-full">Calculate</button>
                           </div>
                         </div>
                       </div>
                       <!-- ellipse ends -->
                 </div>
                 <!-- area container -->
-                <div class="lg:w-[300px] border text-center">
-                    <h3 class="text-xl underline font-semibold">Area Calculation</h3>
+                <div id="area-log" class="lg:w-[300px] border text-center">
+                    <h3 class="text-xl underline font-semibold mb-4">Area Calculation</h3>
                 </div>
             </div>
         </section>
